--- a/AriCoffeeShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AriCoffeeShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Dinamik CV Sistemi</div>
+                <div class="sidebar-brand-text mx-3">Coffee Shop Admin Panel</div>
             </a>
 
             <!-- Divider -->
@@ -62,42 +62,28 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                    aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <span>İçerikler</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                      
+                        <a class="collapse-item" href="buttons.html">Kahveler </a>
+                        <a class="collapse-item" href="cards.html">Şubeler</a>
+                        <a class="collapse-item" href="cards.html">Blog</a>
+                        <a class="collapse-item" href="cards.html">İletişim</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                   aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Utilities</span>
-                </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                     data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Utilities:</h6>
-                        <a class="collapse-item" href="utilities-color.html">Colors</a>
-                        <a class="collapse-item" href="utilities-border.html">Borders</a>
-                        <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                        <a class="collapse-item" href="utilities-other.html">Other</a>
-                    </div>
-                </div>
-            </li>
+           
 
             <!-- Divider -->
             <hr class="sidebar-divider">
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Addons
+                Yönetim Paneli
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -105,14 +91,14 @@
                 <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true"
                    aria-controls="collapsePages">
                     <i class="fas fa-fw fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Uygulama Yönetimi</span>
                 </a>
                 <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
                      data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Login Screens:</h6>
-                        <a class="collapse-item" href="/User/Index">Kullanıcı Listesi</a>
-                        <a class="collapse-item" href="register.html">Register</a>
+                        <h6 class="collapse-header">Sipariş Yönetimi:</h6>
+                        <a class="collapse-item" href="/User/Index">Kullanıcı Yönetimi</a>
+                        <a class="collapse-item" href="register.html">Ayarlar</a>
 
                     </div>
                 </div>
